# flist

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: args.rs  config.rs  errors.rs  link.rs  lock.rs  main.rs  project.rs  requests.rs
src/gui/: mod.rs  open.rs
