[package]
name = "flist"
version = "0.1.1"
edition = "2021"
authors = ["Ben Avrahami"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
crossterm = "0.26.1"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.7.6"
